--- a/_config.yml
+++ b/_config.yml
@@ -14,28 +14,28 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Franklin Jaya # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: Fij personal blog # it will display as the subtitle
 
-description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+description: # used by seo meta and the atom feed
+  "This is a blog about personal life, technology, and life lessons."
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
 url: "https://chirpy-franklin_jaya"
 
 github:
-  username: github_username # change to your GitHub username
+  username: FranklinJaya2006 # change to your GitHub username
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: FranklinJa8276 # change to your Twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Franklin Jaya
+  email: franklinjaya01@student.ciputra.ac.id # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://twitter.com/username # change to your Twitter homepage
@@ -98,7 +98,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: assets/lib/22a3e24b0d0c74c2e8d335860ce2cff2.jpg
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
